--- a/css/mStyles.css
+++ b/css/mStyles.css
@@ -1,7 +1,7 @@
 .imageBorder {
     border-radius: 25px;
-    border: 3px solid #403D39;
-    background-color: #686963; 
+    border: 3px solid #969696;
+    background-color: #CBCBD3; 
     padding: 10px; 
     width: 200px;
     height: 200px;   
